servlet_response_验证码

--- a/day5035_ServletContext_Response/WebContent/WEB-INF/web.xml
+++ b/day5035_ServletContext_Response/WebContent/WEB-INF/web.xml
@@ -99,4 +99,15 @@
     <servlet-name>ServletDemo08</servlet-name>
     <url-pattern>/ServletDemo08</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+    <description></description>
+    <display-name>VerifyCodeServlet</display-name>
+    <servlet-name>VerifyCodeServlet</servlet-name>
+    <servlet-class>org.xueyao.verifycode.VerifyCodeServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>VerifyCodeServlet</servlet-name>
+    <url-pattern>/VerifyCodeServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
