--- a/day5036_ServletContext_Request/WebContent/WEB-INF/web.xml
+++ b/day5036_ServletContext_Request/WebContent/WEB-INF/web.xml
@@ -79,4 +79,14 @@
     <servlet-name>ServletDemo05</servlet-name>
     <url-pattern>/ServletDemo05</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ReadParams</display-name>
+    <servlet-name>ReadParams</servlet-name>
+    <servlet-class>org.xueyao.form.ReadParams</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ReadParams</servlet-name>
+    <url-pattern>/ReadParams</url-pattern>
+  </servlet-mapping>
 </web-app>
