--- a/day5038_JSP/WebContent/WEB-INF/web.xml
+++ b/day5038_JSP/WebContent/WEB-INF/web.xml
@@ -11,9 +11,19 @@
   </welcome-file-list>
   <servlet>
     <description></description>
+    <display-name>ProductServlet01</display-name>
+    <servlet-name>ProductServlet01</servlet-name>
+    <servlet-class>org.xueyao.servlet.ProductServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProductServlet01</servlet-name>
+    <url-pattern>/ProductServlet01</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
     <display-name>ProductServlet</display-name>
     <servlet-name>ProductServlet</servlet-name>
-    <servlet-class>org.xueyao.servlet.ProductServlet</servlet-class>
+    <servlet-class>org.xueyao.produce.servlet.ProductServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>ProductServlet</servlet-name>
