--- a/day6040_Shop/WebRoot/WEB-INF/web.xml
+++ b/day6040_Shop/WebRoot/WEB-INF/web.xml
@@ -29,5 +29,14 @@
     <servlet-name>LoginServlet</servlet-name>
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
-  
+  <servlet>
+    <description></description>
+    <display-name>FindAllProductsServlet</display-name>
+    <servlet-name>FindAllProductsServlet</servlet-name>
+    <servlet-class>org.xueyao.web.FindAllProductsServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FindAllProductsServlet</servlet-name>
+    <url-pattern>/findAllProducts</url-pattern>
+  </servlet-mapping>
 </web-app>
