商品分类的删除--涉及分类下的商品，删除时，把商品的cid设空

--- a/day6041_Shop/WebRoot/WEB-INF/web.xml
+++ b/day6041_Shop/WebRoot/WEB-INF/web.xml
@@ -79,4 +79,14 @@
     <servlet-name>UpdateCategoryServlet</servlet-name>
     <url-pattern>/updateCategory</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>DeleteCategoryServlet</display-name>
+    <servlet-name>DeleteCategoryServlet</servlet-name>
+    <servlet-class>org.xueyao.web.DeleteCategoryServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DeleteCategoryServlet</servlet-name>
+    <url-pattern>/deleteCategory</url-pattern>
+  </servlet-mapping>
 </web-app>
