--- a/day6041_Shop/WebRoot/WEB-INF/web.xml
+++ b/day6041_Shop/WebRoot/WEB-INF/web.xml
@@ -9,6 +9,14 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <filter>
+  	<filter-name>EncodingFilter</filter-name>
+  	<filter-class>org.xueyao.filter.EncodingFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>EncodingFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
   <servlet>
     <description></description>
     <display-name>CheckcodeServlet</display-name>
