--- a/day6041_Shop/WebRoot/WEB-INF/web.xml
+++ b/day6041_Shop/WebRoot/WEB-INF/web.xml
@@ -10,12 +10,12 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   <filter>
-  	<filter-name>EncodingFilter</filter-name>
-  	<filter-class>org.xueyao.filter.EncodingFilter</filter-class>
+    <filter-name>EncodingFilter</filter-name>
+    <filter-class>org.xueyao.filter.EncodingFilter</filter-class>
   </filter>
   <filter-mapping>
-  	<filter-name>EncodingFilter</filter-name>
-  	<url-pattern>/*</url-pattern>
+    <filter-name>EncodingFilter</filter-name>
+    <url-pattern>/*</url-pattern>
   </filter-mapping>
   <servlet>
     <description></description>
@@ -146,5 +146,15 @@
   <servlet-mapping>
     <servlet-name>AdminLogin</servlet-name>
     <url-pattern>/adminLogin</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>PageServlet</display-name>
+    <servlet-name>PageServlet</servlet-name>
+    <servlet-class>org.xueyao.web.PageServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>PageServlet</servlet-name>
+    <url-pattern>/page</url-pattern>
   </servlet-mapping>
 </web-app>
