estore-前台-订单提交

--- a/estore/WebRoot/WEB-INF/web.xml
+++ b/estore/WebRoot/WEB-INF/web.xml
@@ -67,4 +67,14 @@
     <servlet-name>PCDServlet</servlet-name>
     <url-pattern>/pcd</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>OrderServlet</display-name>
+    <servlet-name>OrderServlet</servlet-name>
+    <servlet-class>me.xueyao.web.OrderServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>OrderServlet</servlet-name>
+    <url-pattern>/order</url-pattern>
+  </servlet-mapping>
 </web-app>
