estore-后台-选项卡bug修复,选项卡存在时,继续创建选项卡 -- bug好多

--- a/estore_admin/WebRoot/WEB-INF/web.xml
+++ b/estore_admin/WebRoot/WEB-INF/web.xml
@@ -27,4 +27,14 @@
     <servlet-name>AdminServlet</servlet-name>
     <url-pattern>/admin</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>UploadServlet</display-name>
+    <servlet-name>UploadServlet</servlet-name>
+    <servlet-class>me.xueyao.web.UploadServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UploadServlet</servlet-name>
+    <url-pattern>/upload</url-pattern>
+  </servlet-mapping>
 </web-app>
