--- a/estore_admin/WebRoot/WEB-INF/web.xml
+++ b/estore_admin/WebRoot/WEB-INF/web.xml
@@ -17,6 +17,14 @@
     <filter-name>GenericEncodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  <filter>
+  	<filter-name>PrivilegeFilter</filter-name>
+  	<filter-class>me.xueyao.filter.PrivilegeFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>PrivilegeFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
   <servlet>
     <description></description>
     <display-name>AdminServlet</display-name>
@@ -26,6 +34,16 @@
   <servlet-mapping>
     <servlet-name>AdminServlet</servlet-name>
     <url-pattern>/admin</url-pattern>
+  </servlet-mapping>
+    <servlet>
+    <description></description>
+    <display-name>UserServlet</display-name>
+    <servlet-name>UserServlet</servlet-name>
+    <servlet-class>me.xueyao.web.UserServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UserServlet</servlet-name>
+    <url-pattern>/user</url-pattern>
   </servlet-mapping>
   <servlet>
     <description></description>
