--- a/estore/WebRoot/WEB-INF/web.xml
+++ b/estore/WebRoot/WEB-INF/web.xml
@@ -9,6 +9,7 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <!-- 过滤器 乱码问题-->
   <filter>
     <filter-name>GenericEncodingFilter</filter-name>
     <filter-class>me.xueyao.filter.GenericEncodingFilter</filter-class>
@@ -17,6 +18,10 @@
     <filter-name>GenericEncodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  <!-- 监听器 订单失效 -->
+  <listener>
+  	<listener-class>me.xueyao.listener.ScanListener</listener-class>
+  </listener>
   <servlet>
     <description></description>
     <display-name>BaseServlet</display-name>
