SSH(整合)-Struts和Spring整合

--- a/day7066_SSH01/WebRoot/WEB-INF/web.xml
+++ b/day7066_SSH01/WebRoot/WEB-INF/web.xml
@@ -9,6 +9,15 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <!-- 配置Spring监听器 ：保证工程在启动时，创建IOC容器，并保存在ServletContext -->
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+  <!-- 指定配置文件的路径 -->
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath:applicationContext.xml</param-value>
+  </context-param>
   
   <filter>
         <filter-name>struts2</filter-name>
