--- a/day7066_SSH02_Annotation/WebRoot/WEB-INF/web.xml
+++ b/day7066_SSH02_Annotation/WebRoot/WEB-INF/web.xml
@@ -22,6 +22,11 @@
   <filter>
         <filter-name>struts2</filter-name>
         <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
+        <!-- 开启开发者模式 -->
+        <init-param>
+            <param-name>struts.devMode</param-name>
+            <param-value>true</param-value>
+        </init-param>
     </filter>
 
     <filter-mapping>
