--- a/ElasticSearchDemo/pom.xml
+++ b/ElasticSearchDemo/pom.xml
@@ -7,6 +7,33 @@
     <groupId>me.xueyao.elasticsearch</groupId>
     <artifactId>ElasticSearchDemo</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <!-- ElasticSearch core -->
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>2.4.5</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+    </dependencies>
 
 </project>
