--- a/springDataElasticSearchTest/src/main/resources/log4j.properties
+++ b/springDataElasticSearchTest/src/main/resources/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss,SSS} %5p %
 
 ### direct messages to file mylog.log ###
 log4j.appender.file=org.apache.log4j.FileAppender
-log4j.appender.file.File=z:/mylog.log
+log4j.appender.file.File=c:/mylog.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss,SSS}%5p %c{1}:%L - %m%n
 
