--- a/mybatis/pom.xml
+++ b/mybatis/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>mybatis01</module>
+        <module>mybatis02</module>
     </modules>
     <packaging>pom</packaging>
 
