SpringMVC-基础数据类型绑定

--- a/springmvc/springmvc_02/pom.xml
+++ b/springmvc/springmvc_02/pom.xml
@@ -45,6 +45,7 @@
                 <configuration>
                     <port>8080</port>
                     <path>/</path>
+                    <uriEncoding>utf-8</uriEncoding>
                 </configuration>
             </plugin>
         </plugins>
