--- a/springmvc/springmvc_02/pom.xml
+++ b/springmvc/springmvc_02/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>jsp-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!--jackson JSON插件-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
