--- a/springmvc/springmvc_02/pom.xml
+++ b/springmvc/springmvc_02/pom.xml
@@ -40,6 +40,13 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+        <!--文件上传-->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
