--- a/springmvc/pom.xml
+++ b/springmvc/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>springmvc_02</module>
+        <module>springmvc-restful</module>
     </modules>
     <packaging>pom</packaging>
 
