Spring-SpringMVC-Mybatis(SSH)整合源码-1

--- a/ssm/spring-springmvc-mybatis/src/main/webapp/WEB-INF/web.xml
+++ b/ssm/spring-springmvc-mybatis/src/main/webapp/WEB-INF/web.xml
@@ -27,17 +27,17 @@
 
     <!-- 配置SpringMVC -->
     <servlet>
-        <servlet-name>ssh</servlet-name>
+        <servlet-name>ssm</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:spring/ssh-servlet.xml</param-value>
+            <param-value>classpath:spring/ssm-servlet.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>ssh</servlet-name>
+        <servlet-name>ssm</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
