--- a/mybatis/pom.xml
+++ b/mybatis/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>mybatis01</module>
         <module>mybatis02</module>
+        <module>mybatis-mapper</module>
     </modules>
     <packaging>pom</packaging>
 
